# POS_Test

./: CMakeLists.txt  codes.h  decorations.cpp  decorations.h  gui.cpp  gui.h  inventario.cpp  inventario.h  main.cpp  pedido.cpp  pedido.h  producto.cpp  producto.h  user.cpp  user.h  user_manager.cpp  user_manager.h
